// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages should add data to the tree 1`] = `
{
  "bot-output": {
    "!test": {
      "": [
        {
          "ioc": {},
          "options": {
            "channelNames": [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
      ],
    },
  },
  "channel": {},
}
`;

exports[`Messages should add data to the tree 2`] = `
{
  "bot-output": {
    "!test": {
      "": [
        {
          "ioc": {},
          "options": {
            "channelNames": [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
        {
          "ioc": {},
          "options": {
            "allowedRoles": [
              "Support",
            ],
            "channelNames": [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
      ],
    },
  },
  "channel": {},
}
`;

exports[`Messages should add data to the tree 3`] = `
{
  "bot-development": {
    "!othertrigger": {
      "": [
        {
          "ioc": {},
          "options": {
            "allowedRoles": [
              "Developer",
            ],
            "channelNames": [
              "bot-development",
              "bot-test-channel",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!otherTrigger",
          },
        },
      ],
    },
  },
  "bot-output": {
    "!test": {
      "": [
        {
          "ioc": {},
          "options": {
            "channelNames": [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
        {
          "ioc": {},
          "options": {
            "allowedRoles": [
              "Support",
            ],
            "channelNames": [
              "bot-output",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!test",
          },
        },
      ],
    },
  },
  "bot-test-channel": {
    "!othertrigger": {
      "": [
        {
          "ioc": {},
          "options": {
            "allowedRoles": [
              "Developer",
            ],
            "channelNames": [
              "bot-development",
              "bot-test-channel",
            ],
            "description": "test",
            "event": "MESSAGE",
            "trigger": "!otherTrigger",
          },
        },
      ],
    },
  },
  "channel": {},
}
`;

exports[`Messages should extract messages from direct message 1`] = `
[
  {
    "content": "this is the message content",
    "handlerKeys": [
      "9007199254740991",
      "this",
      "is",
    ],
    "isDirectMessage": true,
    "member": {
      "avatar": null,
      "avatarURL": null,
      "communicationDisabledUntilTimestamp": null,
      "displayAvatarURL": "https://cdn.discordapp.com/avatars/9007199254740991/user%20avatar%20url.webp",
      "displayName": "nick",
      "flags": 0,
      "guildId": "9007199254740991",
      "joinedTimestamp": NaN,
      "nickname": "nick",
      "pending": false,
      "premiumSinceTimestamp": null,
      "roles": {
        "cache": [],
      },
      "userId": "9007199254740991",
    },
  },
]
`;

exports[`Messages should extract messages from public channel 1`] = `
[
  {
    "content": "this is the message content",
    "handlerKeys": [
      "9007199254740991",
      "this",
      "is",
    ],
    "isDirectMessage": false,
    "member": {
      "avatar": null,
      "avatarURL": null,
      "communicationDisabledUntilTimestamp": null,
      "displayAvatarURL": "https://cdn.discordapp.com/avatars/9007199254740991/user%20avatar%20url.webp",
      "displayName": "nick",
      "flags": 0,
      "guildId": "9007199254740991",
      "joinedTimestamp": NaN,
      "nickname": "nick",
      "pending": false,
      "premiumSinceTimestamp": null,
      "roles": {
        "cache": [],
      },
      "userId": "9007199254740991",
    },
  },
]
`;
